# clean_code_rust

./: Cargo.toml  README.md
todo_api/: Cargo.toml
todo_api/src/: main.rs
todo_api/src/controllers/: todo_controller.rs
todo_api/src/requests/: mod.rs  todo_request.rs
todo_core/: Cargo.toml
todo_core/src/: lib.rs
todo_core/src/models/: todo_item.rs
todo_core/src/repositories/: mod.rs  todo_repository_trait.rs
todo_core/src/services/: mod.rs  todo_service.rs  todo_service_trait.rs
todo_data/: Cargo.toml
todo_data/src/entities/: todo_entity.rs
todo_data/src/repositories/: todo_repository.rs
