[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = {version = "1.3.4", features = ["v4", "serde"]}

todo_core = { path = "../todo_core"}
todo_data = { path = "../todo_data"}