[package]
name = "todo_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"

todo_core = { path = "../todo_core"}
uuid = { version = "1.4.0", features = ["v4"]}
